feat: add big equivalents

--- a/src/providers/locales/en.json
+++ b/src/providers/locales/en.json
@@ -423,28 +423,46 @@
         "box": "Personal and professional usage; xDSL, FTTx.",
         "spam": "Unread.",
         "stockagedonnee": "For 1 year.",
-        "boeuf": "Average of emission factors for rib steak, entrecôte, beef tongue, flank steak, beef shoulder, beef cheek",
-        "veau": "Average of emission factors for veal rib, veal shoulder, veal escalope, veal nut, veal breast, and veal sweetbread",
-        "porc": "Average of emission factors for pork chop, pork shoulder, pork belly, pork loin",
-        "dorade": "Average of emission factors for farmed gilthead seabream and wild gilthead seabream",
-        "beurre": "Average of emission factors for unsalted butter and salted butter",
+        "boeuf": "Average of emission factors for rib steak, entrecôte, beef tongue, flank steak, beef shoulder, beef cheek.",
+        "veau": "Average of emission factors for veal rib, veal shoulder, veal escalope, veal nut, veal breast, and veal sweetbread.",
+        "porc": "Average of emission factors for pork chop, pork shoulder, pork belly, pork loin.",
+        "dorade": "Average of emission factors for farmed gilthead seabream and wild gilthead seabream.",
+        "beurre": "Average of emission factors for unsalted butter and salted butter.",
         "fromagedure": "Average of emission factors for various hard cheeses: Emmental, Gruyère, Comté, Gouda, etc.",
         "fromagemolle": "Average of emission factors for various soft cheeses: Camembert, Brie, Maroilles, Mont-d'Or, etc.",
         "fromagebleu": "Average of emission factors for various blue cheeses: Roquefort, Bleu d'Auvergne, Gorgonzola, etc.",
-        "riz": "Average of emission factors for various rice types: white rice, brown rice, red rice, wild rice",
-        "ble": "Average of emission factors for various wheat types: whole durum wheat, precooked wheat, wheat semolina, soft wheat",
+        "riz": "Average of emission factors for various rice types: white rice, brown rice, red rice, wild rice.",
+        "ble": "Average of emission factors for various wheat types: whole durum wheat, precooked wheat, wheat semolina, soft wheat.",
         "hotel": "Includes emissions related to energy consumption (heating, electricity, air conditioning, hot water), maintenance services (cleaning, laundry), infrastructure (construction, maintenance), and commuting of staff.",
         "camping": "Includes the construction and energy consumption of infrastructure (showers, sanitary facilities, and lighting).",
         "location": "Includes emissions related to energy consumption (heating, electricity, hot water), infrastructure (construction), and maintenance services.",
         "residencesecondaire": "Includes emissions related to energy consumption (heating, electricity, hot water), infrastructure (construction), and maintenance services.",
         "2050": "The average French person emits nearly 9.3 tonnes of CO2 per year. To limit climate change, it is essential to reduce these emissions and achieve a maximum target of 2 tonnes of CO2e per person per year by 2050.",
-        "magasin": "For a 1 kg package, car travel",
-        "magasindouce": "For a 1 kg package, walking",
-        "pointrelais": "For a 1 kg package, car travel",
-        "pointrelaisdouce": "For a 1 kg package, walking",
-        "clickcollect": "For a 1 kg package, car travel",
-        "clickcollectdouce": "For a 1 kg package, walking",
-        "livraisondomicile": "For a 1 kg package."
+        "magasin": "For a 1 kg package, car travel.",
+        "magasindouce": "For a 1 kg package, walking.",
+        "pointrelais": "For a 1 kg package, car travel.",
+        "pointrelaisdouce": "For a 1 kg package, walking.",
+        "clickcollect": "For a 1 kg package, car travel.",
+        "clickcollectdouce": "For a 1 kg package, walking.",
+        "livraisondomicile": "For a 1 kg package.",
+        "voiturefrancaisejour": "Average annual emissions of private thermal cars from 2013 to 2024 (70.7 Mt CO2 e) reported per day.",
+        "voiturefrancaisean": "Average emissions of private cars in circulation from 2013 to 2024.",
+        "populationfrancaise": "Estimation of greenhouse gases associated with the average lifestyle of the French population, whose carbon footprint is estimated at 9.1 T CO2 e. The French population is estimated at 68,606,000 inhabitants in 2025.",
+        "parcbovin": "Programs inventoried in 2024.",
+        "chauffageenfrance": "Average annual emissions linked to heating, domestic hot water and cooking from 2013 to 2024 (43.32 Mt CO2 e).",
+        "numeriqueenfrance": "Establishments in 2022 linked to the manufacture, distribution, use and end of life of devices.",
+        "aviationcivileenfrance": "Average annual emissions from 2013 to 2024 on domestic flights and international flights departing from France.",
+        "agricoleenfrancejour": "Average annual emissions from agriculture from 2013 to 2024 (79 MT CO2e) reported on a 1-day basis. Land use, land-use change and forestry are not included in the scope.",
+        "chauffageenfrancejour": "Average annual emissions related to heating, domestic hot water and cooking from 2013 to 2024 (43.73 Mt CO2 e), reported per day.",
+        "foretenfrancejour": "Absorption inventoried in 2024 (51.1 Mt CO2E), reported to 1 day.",
+        "climatisationenfrancejour": "Programs invenided in 2024 (1,196 Mt CO2E), reported to 1 day.",
+        "voiturefrancaiseheure": "Average annual emissions of private thermal cars from 2013 to 2024 (70.7 Mt CO2 e) reported per hour.",
+        "numeriqueenfrancejour": "Electric consumption linked to digital services is 51.5 TWh/year in 2022 postponed by the day, then calculated with the 2022 electric mix. The consumption of data center abroad, and the manufacture of devices are not taken into account.",
+        "traitementdechetsjour": "Average annual emissions related to waste and domestic burning and wastewater from 2013 to 2024 (1.89 Mt CO2 e), reported per day.",
+        "trainenfrancejour": "Average annual train emissions from 2013 to 2024 for transporting people and goods (0.43 MT CO2e) reported per day",
+        "datacenterjour": "PAR1 campus in Nozar which includes 23 data centers, spans 110 hectares and has a power capacity of 250 MW. Electricity consumption of 1.3TWh/year reported to the 2024 electricity mix.",
+        "avion-johannesburg-paris-rugby": "For the 2023 World Cup, long-haul flight travel, with an as-the-crow-flies distance of 8,731 km with a delegation of 45 people (33 players and 12 staff members).",
+        "maisonneuve": "Construction of a new conventional house of 130 m² living space - case of housing in Saint-Pierre and Miquelon."
       },
       "post": {
         "ski": "Includes: the carbon impact of transportation (52%), accommodation (4%), food (8%), ski area (3%), infrastructure, equipment, and services (17%), and gear (16%).",
