--- a/src/providers/locales/es.json
+++ b/src/providers/locales/es.json
@@ -423,28 +423,46 @@
         "box": "Uso personal y profesional; xDSL, FTTx.",
         "spam": "No leído.",
         "stockagedonnee": "Durante 1 año.",
-        "boeuf": "Promedio de los factores de emisión de costilla de res, entrecot, lengua de res, bistec de falda, paleta de res, carrillera de res",
-        "veau": "Promedio de los factores de emisión de costilla de ternera, paleta de ternera, escalope de ternera, nuez de ternera, pecho de ternera y molleja de ternera",
-        "porc": "Promedio de los factores de emisión de chuleta de cerdo, paleta de cerdo, panceta de cerdo, lomo de cerdo",
-        "dorade": "Promedio de los factores de emisión de dorada de cultivo y dorada salvaje",
-        "beurre": "Promedio de los factores de emisión de mantequilla sin sal y mantequilla con sal",
+        "boeuf": "Promedio de los factores de emisión de costilla de res, entrecot, lengua de res, bistec de falda, paleta de res, carrillera de res.",
+        "veau": "Promedio de los factores de emisión de costilla de ternera, paleta de ternera, escalope de ternera, nuez de ternera, pecho de ternera y molleja de ternera.",
+        "porc": "Promedio de los factores de emisión de chuleta de cerdo, paleta de cerdo, panceta de cerdo, lomo de cerdo.",
+        "dorade": "Promedio de los factores de emisión de dorada de cultivo y dorada salvaje.",
+        "beurre": "Promedio de los factores de emisión de mantequilla sin sal y mantequilla con sal.",
         "fromagedure": "Promedio de los factores de emisión de varios quesos duros: Emmental, Gruyère, Comté, Gouda, etc.",
         "fromagemolle": "Promedio de los factores de emisión de varios quesos blandos: Camembert, Brie, Maroilles, Mont-d'Or, etc.",
         "fromagebleu": "Promedio de los factores de emisión de varios quesos azules: Roquefort, Bleu d'Auvergne, Gorgonzola, etc.",
-        "riz": "Promedio de los factores de emisión de varios arroces: Arroz blanco, integral, rojo, salvaje",
-        "ble": "Promedio de los factores de emisión de varios trigos: Trigo duro entero, trigo precocido, sémola de trigo, trigo blando",
+        "riz": "Promedio de los factores de emisión de varios arroces: Arroz blanco, integral, rojo, salvaje.",
+        "ble": "Promedio de los factores de emisión de varios trigos: Trigo duro entero, trigo precocido, sémola de trigo, trigo blando.",
         "hotel": "Incluye las emisiones relacionadas con el consumo de energía (calefacción, electricidad, aire acondicionado, agua caliente), los servicios de mantenimiento (limpieza, lavandería), la infraestructura (construcción, mantenimiento) y los desplazamientos del personal.",
         "camping": "Incluye la construcción y el consumo de energía de la infraestructura (duchas, instalaciones sanitarias e iluminación).",
         "location": "Incluye las emisiones relacionadas con el consumo de energía (calefacción, electricidad, agua caliente), la infraestructura (construcción) y los servicios de mantenimiento.",
         "residencesecondaire": "Incluye las emisiones relacionadas con el consumo de energía (calefacción, electricidad, agua caliente), la infraestructura (construcción) y los servicios de mantenimiento.",
         "2050": "Un francés emite de media casi 9,3 toneladas de CO2 al año. Para limitar el cambio climático, es esencial reducir estas emisiones y alcanzar un objetivo máximo de 2 toneladas de CO2e por persona y año para 2050.",
-        "magasin": "Para un paquete de un kilo, viajes en coche",
-        "magasindouce": "Para un paquete de un kilo, caminando",
-        "pointrelais": "Para un paquete de un kilo, viajes en coche",
-        "pointrelaisdouce": "Para un paquete de un kilo, caminando",
-        "clickcollect": "Para un paquete de un kilo, viajes en coche",
-        "clickcollectdouce": "Para un paquete de un kilo, caminando",
-        "livraisondomicile": "Para un paquete de un kilo."
+        "magasin": "Para un paquete de un kilo, viajes en coche.",
+        "magasindouce": "Para un paquete de un kilo, caminando.",
+        "pointrelais": "Para un paquete de un kilo, viajes en coche.",
+        "pointrelaisdouce": "Para un paquete de un kilo, caminando.",
+        "clickcollect": "Para un paquete de un kilo, viajes en coche.",
+        "clickcollectdouce": "Para un paquete de un kilo, caminando.",
+        "livraisondomicile": "Para un paquete de un kilo.",
+        "voiturefrancaisejour": "Promedio de emisiones anuales de automóviles particulares térmicos de 2013 a 2024 (70,7 Mt CO2 e) reportado por día.",
+        "voiturefrancaisean": "Promedio de emisiones de automóviles particulares en circulación de 2013 a 2024.",
+        "populationfrancaise": "Estimación de gases de efecto invernadero asociados al estilo de vida promedio de la población francesa, cuya huella de carbono se estima en 9,1 T CO2 e. La población francesa se estima en 68.606.000 habitantes en 2025.",
+        "parcbovin": "Programas inventariados en 2024.",
+        "chauffageenfrance": "Emisiones medias anuales vinculadas a la calefacción, el agua caliente sanitaria y la cocina de 2013 a 2024 (43,32 Mt CO2 e).",
+        "numeriqueenfrance": "Los establecimientos en 2022 vinculados a la fabricación, distribución, uso y fin de vida de los dispositivos.",
+        "aviationcivileenfrance": "Promedio de emisiones anuales de 2013 a 2024 en vuelos domésticos y vuelos internacionales con salida desde Francia.",
+        "agricoleenfrancejour": "Emisiones anuales promedio de la agricultura de 2013 a 2024 (79 MT de CO₂e) reportadas diariamente. El uso del suelo, el cambio de uso del suelo y la silvicultura no se incluyen en el alcance.",
+        "chauffageenfrancejour": "Promedio de emisiones anuales relacionadas con calefacción, agua caliente sanitaria y cocción de 2013 a 2024 (43,73 Mt CO2 e), reportado por día.",
+        "foretenfrancejour": "La absorción inventariada en 2024 (51.1 TM CO2E), reportada a 1 día.",
+        "climatisationenfrancejour": "Los programas invenieron en 2024 (1,196 MT CO2E), reportados a 1 día.",
+        "voiturefrancaiseheure": "Promedio de emisiones anuales de automóviles particulares térmicos de 2013 a 2024 (70,7 Mt CO2 e) reportado por hora.",
+        "numeriqueenfrancejour": "El consumo eléctrico vinculado a los servicios digitales es 51.5 TWH/año en 2022 pospuesto por el día, luego se calcula con la mezcla eléctrica 2022. El consumo del centro de datos en el extranjero y la fabricación de dispositivos no se tienen en cuenta.",
+        "traitementdechetsjour": "Promedio de emisiones anuales relacionadas con residuos y quema doméstica y aguas residuales de 2013 a 2024 (1,89 Mt CO2 e), reportado por día.",
+        "trainenfrancejour": "Promedio de emisiones anuales de trenes de 2013 a 2024 para transportar personas y mercancías (0,43 MT CO2e) reportado por día",
+        "datacenterjour": "Campus PAR1 en Nozar que agrupa 23 centros de datos, se extiende por 110 hectáreas y tiene una potencia de 250 MW. Consumo eléctrico de 1,3TWh/año reportado a la mezcla eléctrica 2024.",
+        "avion-johannesburg-paris-rugby": "Para la Copa del Mundo de 2023, viaje en avión de largo recorrido, con una distancia en línea recta de 8.731 km con una delegación de 45 personas (33 jugadores y 12 miembros del personal).",
+        "maisonneuve": "Construcción de una casa nueva convencional de 130 m² habitables - caso de viviendas en San Pedro y Miquelón"
       },
       "post": {
         "ski": "Incluye: el impacto de carbono del transporte (52%), alojamiento (4%), alimentos (8%), la estación de esquí (3%), infraestructura, equipo y servicios (17%), y equipo (16%).",
