fix: france numerique daily values

--- a/src/providers/locales/en.json
+++ b/src/providers/locales/en.json
@@ -469,7 +469,7 @@
         "foretenfrancejour": "Absorption inventoried in 2024 (51.1 Mt CO2E), reported to 1 day.",
         "climatisationenfrancejour": "Programs invenided in 2024 (1,196 Mt CO2E), reported to 1 day.",
         "voiturefrancaiseheure": "Average annual emissions of private thermal cars from 2013 to 2024 (70.7 Mt CO2 e) reported per hour.",
-        "numeriqueenfrancejour": "Electric consumption linked to digital services is 51.5 TWh/year in 2022 postponed by the day, then calculated with the 2022 electric mix. The consumption of data center abroad, and the manufacture of devices are not taken into account.",
+        "numeriqueenfrancejour": "Annual emissions in 2022 related to the manufacture, distribution, use and end of life of devices, reported to the day.",
         "traitementdechetsjour": "Average annual emissions related to waste and domestic burning and wastewater from 2013 to 2024 (1.89 Mt CO2 e), reported per day.",
         "trainenfrancejour": "Average annual train emissions from 2013 to 2024 for transporting people and goods (0.43 MT CO2e) reported per day",
         "datacenterjour": "PAR1 campus in Nozar which includes 23 data centers, spans 110 hectares and has a power capacity of 250 MW. Electricity consumption of 1.3TWh/year reported to the 2024 electricity mix.",
