--- a/src/providers/locales/es.json
+++ b/src/providers/locales/es.json
@@ -469,7 +469,7 @@
         "foretenfrancejour": "La absorción inventariada en 2024 (51.1 TM CO2E), reportada a 1 día.",
         "climatisationenfrancejour": "Los programas invenieron en 2024 (1,196 MT CO2E), reportados a 1 día.",
         "voiturefrancaiseheure": "Promedio de emisiones anuales de automóviles particulares térmicos de 2013 a 2024 (70,7 Mt CO2 e) reportado por hora.",
-        "numeriqueenfrancejour": "El consumo eléctrico vinculado a los servicios digitales es 51.5 TWH/año en 2022 pospuesto por el día, luego se calcula con la mezcla eléctrica 2022. El consumo del centro de datos en el extranjero y la fabricación de dispositivos no se tienen en cuenta.",
+        "numeriqueenfrancejour": "Emisiones anuales en 2022 relacionadas con la fabricación, distribución, uso y fin de vida útil de dispositivos, reportadas por día.",
         "traitementdechetsjour": "Promedio de emisiones anuales relacionadas con residuos y quema doméstica y aguas residuales de 2013 a 2024 (1,89 Mt CO2 e), reportado por día.",
         "trainenfrancejour": "Promedio de emisiones anuales de trenes de 2013 a 2024 para transportar personas y mercancías (0,43 MT CO2e) reportado por día",
         "datacenterjour": "Campus PAR1 en Nozar que agrupa 23 centros de datos, se extiende por 110 hectáreas y tiene una potencia de 250 MW. Consumo eléctrico de 1,3TWh/año reportado a la mezcla eléctrica 2024.",
